# crypto-bot

./: .gitignore  README.md  app.py  bot.py  gui.py  pyproject.toml  trader.py  util.py
output/: trending_coins.json
src/crypto/: crew.py  main.py
src/crypto/config/: agents.yaml  tasks.yaml
src/crypto/tools/: backtest_tool.py  fetch_tool.py
