[project]
name = "crypto"
version = "0.1.0"
description = "crypto using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "python-binance>=1.0.19",
    "ta>=0.10.2",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.0.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
crypto = "crypto.main:run"
run_crew = "crypto.main:run"
train = "crypto.main:train"
replay = "crypto.main:replay"
test = "crypto.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
